Fixing the label overlapping input bug

--- a/style/auth.css
+++ b/style/auth.css
@@ -24,6 +24,7 @@ form input {
   width: 100%;
   font-size: 1rem;
   border-radius: var(--round);
+  z-index: 1;
 }
 input::placeholder {
   color: white;
